--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -52,3 +52,11 @@ msgstr ""
 msgctxt "#30010"
 msgid "Select stream quality"
 msgstr ""
+
+msgctxt "#30011"
+msgid "Limit bitrate"
+msgstr ""
+
+msgctxt "#30012"
+msgid "Max bitrate allowed (Kbps)"
+msgstr ""
