Verify SSL certificate by default

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -64,3 +64,7 @@ msgstr ""
 msgctxt "#30013"
 msgid "Unable to find a valid stream URL. Please see the log for more information."
 msgstr ""
+
+msgctxt "#30014"
+msgid "Verify SSL certificate"
+msgstr ""
